--- a/service/pom.xml
+++ b/service/pom.xml
@@ -30,6 +30,12 @@
       	<artifactId>dubbo-ext</artifactId>
     </dependency>
   
+  	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+		<version>3.4</version>
+	</dependency>
+  
   	<!-- cat-ext -->
   	<dependency>
   		<groupId>com.serverstarted</groupId>
