--- a/service/src/main/resources/order-service.properties
+++ b/service/src/main/resources/order-service.properties
@@ -1,3 +1,3 @@
-database/service/order/jdbc/url=jdbc:mysql://10.11.1.15:3306/sample?useUnicode=true&amp;characterEncoding=utf8
+database/service/order/jdbc/url=jdbc:mysql://10.49.0.137:3306/loukou_new?useUnicode=true&amp;characterEncoding=utf8
 database/service/order/username=taocz
 database/service/order/password=123456
