--- a/service/pom.xml
+++ b/service/pom.xml
@@ -24,6 +24,14 @@
 
 
   <dependencies>
+  	
+  	<!-- pos-account-client -->
+  	<dependency>
+			<groupId>com.loukou</groupId>
+			<artifactId>pos-account-client</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+	</dependency>
+  	
     <!-- dubbo-ext -->
   	<dependency>
       	<groupId>com.serverstarted</groupId>
