--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,4 +8,10 @@
   </parent>
   <artifactId>order-api</artifactId>
 
+  <dependencies>
+  	<dependency>
+  		<groupId>com.google.guava</groupId>
+  		<artifactId>guava</artifactId>
+  	</dependency>
+  </dependencies>
 </project>
