--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   </parent>
 
   <properties>
-    <dubbo-ext.version>0.1.0</dubbo-ext.version>
+    <dubbo-ext.version>0.2.0-SNAPSHOT</dubbo-ext.version>
   </properties>
 
   <build>
