--- a/service/pom.xml
+++ b/service/pom.xml
@@ -37,6 +37,12 @@
 		<artifactId>goods-api</artifactId>
 		<version>0.1.0-SNAPSHOT</version>
 	</dependency>
+	<dependency>
+		<groupId>com.serverstarted</groupId>
+		<artifactId>user-api</artifactId>
+		<version>0.1.0-SNAPSHOT</version>
+	</dependency>
+	
   	
   	<!-- Joda Time -->
 	<dependency>
@@ -84,6 +90,12 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>order-api</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    
+    <dependency>
+    	<groupId>com.serverstarted</groupId>
+    	<artifactId>goods-api</artifactId>
+    	<version>0.1.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
