--- a/service/pom.xml
+++ b/service/pom.xml
@@ -35,10 +35,15 @@
 
 		<dependency>
 			<groupId>com.serverstarted</groupId>
+			<artifactId>goods-service</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.serverstarted</groupId>
 			<artifactId>goods-api</artifactId>
 			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
-
 		<!-- dubbo-ext -->
 		<dependency>
 			<groupId>com.serverstarted</groupId>
