--- a/service/pom.xml
+++ b/service/pom.xml
@@ -56,11 +56,16 @@
 			<artifactId>super-diamond-client</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		
+		<!-- jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.4</version>
-		</dependency>
+			</dependency>
 		<!-- pos-account-client -->
 		<dependency>
 			<groupId>com.loukou</groupId>
