--- a/service/pom.xml
+++ b/service/pom.xml
@@ -25,7 +25,13 @@
 
 
 	<dependencies>
-
+		<!-- search -->
+		<dependency>
+	    	<groupId>com.loukou</groupId>
+	    	<artifactId>search-client</artifactId>
+	    	<version>0.1.0-SNAPSHOT</version>
+	    </dependency>
+    
 		<!-- order-pay-client -->
 		<dependency>
 			<groupId>com.loukou.order.pay</groupId>
