--- a/service/src/main/resources/dubbo.properties
+++ b/service/src/main/resources/dubbo.properties
@@ -19,6 +19,7 @@ dubbo.registry.address=zookeeper://10.11.1.14:2181
 #dubbo.registry.address=redis://127.0.0.1:6379
 #dubbo.registry.address=dubbo://127.0.0.1:9090
 #dubbo.monitor.protocol=registry
+dubbo.protocol.host=10.11.1.140
 dubbo.protocol.name=dubbo
-dubbo.protocol.port=20880
+dubbo.protocol.port=20830
 dubbo.service.loadbalance=roundrobin
