update dubbo config

--- a/service/src/main/resources/dubbo.properties
+++ b/service/src/main/resources/dubbo.properties
@@ -12,14 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 dubbo.container=spring
-dubbo.application.name=order-service
+#dubbo.application.name=order-service
 dubbo.application.owner=
 #dubbo.registry.address=multicast://224.5.6.7:1234
-dubbo.registry.address=zookeeper://10.11.1.14:2181
+#dubbo.registry.address=zookeeper://127.0.0.1:2181
 #dubbo.registry.address=redis://127.0.0.1:6379
 #dubbo.registry.address=dubbo://127.0.0.1:9090
 #dubbo.monitor.protocol=registry
 #dubbo.protocol.host=10.11.1.144
-dubbo.protocol.name=dubbo
-dubbo.protocol.port=20830
-dubbo.service.loadbalance=roundrobin
+#dubbo.protocol.name=dubbo
+#dubbo.protocol.port=20830
+#dubbo.service.loadbalance=roundrobin
