--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,5 +13,14 @@
   		<groupId>com.google.guava</groupId>
   		<artifactId>guava</artifactId>
   	</dependency>
+  	<!-- jackson -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-databind</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-lang3</artifactId>
+	</dependency>
   </dependencies>
 </project>
