--- a/service/pom.xml
+++ b/service/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>com.loukou.order.pay</groupId>
 			<artifactId>order-pay-client</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.1.0</version>
 		</dependency>
 
 		<dependency>
