--- a/service/pom.xml
+++ b/service/pom.xml
@@ -127,7 +127,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>order-api</artifactId>
-			<version>0.2.1</version>
+			<version>0.4.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
