--- a/service/pom.xml
+++ b/service/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>com.serverstarted</groupId>
 			<artifactId>goods-api</artifactId>
-			<version>0.4.0-SNAPSHOT</version>
+			<version>0.4.0</version>
 		</dependency>
 		<!-- dubbo-ext -->
 		<dependency>
@@ -127,7 +127,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>order-api</artifactId>
-			<version>0.4.0-SNAPSHOT</version>
+			<version>0.4.0</version>
 		</dependency>
 
 		<dependency>
