--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,7 +7,6 @@
     <version>0.2.0-SNAPSHOT</version>
   </parent>
   <artifactId>order-api</artifactId>
-  <version>0.2.1</version>
 
   <dependencies>
   	<dependency>
@@ -24,4 +23,5 @@
 		<artifactId>commons-lang3</artifactId>
 	</dependency>
   </dependencies>
+  <version>0.2.2-SNAPSHOT</version>
 </project>
