--- a/service/pom.xml
+++ b/service/pom.xml
@@ -126,7 +126,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>order-api</artifactId>
-			<version>0.2.1</version>
+			<version>0.2.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
