--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,7 +7,7 @@
     <version>0.2.0-SNAPSHOT</version>
   </parent>
   <artifactId>order-api</artifactId>
-  <version>0.5.0</version>
+  <version>0.6.0-SNAPSHOT</version>
 
   <dependencies>
   	<dependency>
