--- a/service/pom.xml
+++ b/service/pom.xml
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>com.loukou</groupId>
 			<artifactId>pos-account-client</artifactId>
-			<version>0.2.1</version>
+			<version>0.2.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
