--- a/service/pom.xml
+++ b/service/pom.xml
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>com.serverstarted</groupId>
 			<artifactId>goods-api</artifactId>
-			<version>0.5.0-SNAPSHOT</version>
+			<version>0.5.0</version>
 		</dependency>
 		<!-- dubbo-ext -->
 		<dependency>
@@ -74,13 +74,13 @@
 		<dependency>
 			<groupId>com.loukou</groupId>
 			<artifactId>pos-account-client</artifactId>
-			<version>0.2.2-SNAPSHOT</version>
+			<version>0.2.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.serverstarted</groupId>
 			<artifactId>user-api</artifactId>
-			<version>0.5.0-SNAPSHOT</version>
+			<version>0.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -126,7 +126,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>order-api</artifactId>
-			<version>0.5.0-SNAPSHOT</version>
+			<version>0.5.0</version>
 		</dependency>
 
 		<dependency>
