--- a/service/pom.xml
+++ b/service/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 	    	<groupId>com.loukou</groupId>
 	    	<artifactId>search-client</artifactId>
-	    	<version>0.2.4</version>
+	    	<version>0.2.8-SNAPSHOT</version>
 	    </dependency>
     
 		<!-- order-pay-client -->
