--- a/service/pom.xml
+++ b/service/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 	    	<groupId>com.loukou</groupId>
 	    	<artifactId>search-client</artifactId>
-	    	<version>0.2.7-SNAPSHOT</version>
+	    	<version>0.2.12</version>
 	    </dependency>
     
 		<!-- order-pay-client -->
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>com.serverstarted</groupId>
 			<artifactId>goods-api</artifactId>
-			<version>0.5.1-SNAPSHOT</version>
+			<version>0.6.0</version>
 		</dependency>
 		<!-- dubbo-ext -->
 		<dependency>
